--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-ws",
   "version": "0.0.0",
-  "description": "WebSocket service for Angular.js",
+  "description": "WebSocket service for Angular.js.",
   "homepage": "https://github.com/neoziro/angular-ws",
   "authors": [
     "Greg Bergé <neoziro@gmail.com>"
