--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-ws",
   "version": "0.0.0",
-  "description": "WebSocket service for Angular.js",
+  "description": "WebSocket service for Angular.js.",
   "main": "angular-ws.js",
   "scripts": {
     "install": "bower install",
@@ -16,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/neoziro/angular-ws/issues"
   },
-  "homepage": "https://github.com/neoziro/angular-ws"
+  "homepage": "https://github.com/neoziro/angular-ws",
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "chai-jquery": "^1.2.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-uglify": "^0.5.1",
+    "karma": "^0.12.23",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-mocha": "^0.1.9",
+    "mocha": "^1.21.4"
+  }
 }
