--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,6 @@
     "angular": "~1.2.23"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.23",
-    "jquery": "~2.1.1"
+    "angular-mocks": "~1.2.23"
   }
 }
